--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "poio"]
+	path = poio
+	url = https://github.com/rl10n/poio
+	shallow = true
+	registered = true
